# bevy_manager

./: AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-windows.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
